IMPALA-5108: idle_session_timeout kicks in later than expected

Fix: The issue was caused because sessions could get closed
     some time after their timeout expires, because the session
     expiration thread only woke up every session-timeout/2
     seconds. This fix changes the logic, now the session expiration
     thread will wakeup every 1 sec to check whether sessions can
     be expired.

    The test changes in session-expiry-test is based on introducing
    variable names for the numeric constants and to reduce the time
    of max_idle_timeout_ms.

Change-Id: Ic62f1ece6c128a80676c6eb331ef190a038bee76
Reviewed-on: http://gerrit.cloudera.org:8080/7709
Tested-by: Impala Public Jenkins
Reviewed-by: Henry Robinson <henry@cloudera.com>